--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 body {
   background-color: var(--white-color);
   font-family: 'Roboto', sans-serif;
-  font-size: 16px;
 }
 
 .list {
@@ -48,11 +47,13 @@ img {
 
 /* HEADER */
 
+.page-header {
+  border-bottom: 1px solid var(--light-slate-color);
+}
+
 .header-container {
   display: flex;
   align-items: center;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .page-nav {
@@ -83,11 +84,12 @@ img {
 }
 
 .menu-link {
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navy-blue-color);
-  margin-bottom: 24px;
 }
 
 .menu-link:hover,
@@ -98,7 +100,6 @@ img {
 .header-contacts{
   display: flex;
   align-items: center;
-  margin-right: auto;
   gap: 40px;
 }
 
@@ -107,7 +108,6 @@ img {
   letter-spacing: 0.02em;
   color: var(--slate-color);
   font-style: normal;
-  margin-bottom: 24px;
 }
 
 .address-link:hover,
@@ -121,14 +121,6 @@ img {
 
 .hero {
   background-color: var(--navy-blue-color);
-}
-
-.hero-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: 120px;
   padding-bottom: 188px;
   padding-top: 188px;
 }
@@ -140,8 +132,9 @@ img {
   letter-spacing: 0.02em;
   color: var(--white-color);
   margin-bottom: 48px;
-  
   width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .modal-btn {
@@ -158,6 +151,12 @@ img {
 }
 
 .hero-btn {
+  font-family: inherit;
+  display: block;
+  margin: 0 auto;
+  height: 56px;
+  min-width: 169px;
+  font-size: 16px;
   color: var(--white-color);
   background-color: var(--iris-color);
 }
@@ -184,8 +183,8 @@ img {
   overflow: hidden;
 }
 
-.feature .container{
-  margin-bottom: 120px;
+.feature {
+  padding: 120px 0;
 }
 
 .work-features {
@@ -193,7 +192,7 @@ img {
   gap: 24px;
 }
 
-.feature-titel {
+.feature-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -210,8 +209,8 @@ img {
 
 /* SECTION-2 */
 
-.about .container  {
-  margin-bottom: 120px;
+.about {
+  padding-bottom: 120px;
 }
 
 .img-job {
@@ -231,13 +230,10 @@ img {
 
 /* SECTION-3 */
 
-.section-3 {
-  background-color: var(--cloud-color);
-}
-
-.team .container {
+.team {
   padding-top: 120px;
   padding-bottom: 120px;
+  background-color: var(--cloud-color);
 }
 
 .team-list {
@@ -247,15 +243,17 @@ img {
 
 .team-item {
   background-color: var(--white-color);
-  padding-bottom: 32px;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow:var(--navy-blue-color) ;
 }
 
 .team-item:last-child {
   padding-bottom: 0;
 }
 
-.team-card{
-  margin-bottom: 32px;
+.team-text {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .team-name {
@@ -280,15 +278,14 @@ img {
 
 .footer {
   background-color: var(--navy-blue-color);
-}
-
-.footer .container{
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
 .footer .logo{
+  display: block;
   margin-bottom: 16px;
+  margin-right: 0;
 }
 
 span.white {
@@ -304,13 +301,23 @@ span.white {
 
 /* PORTFOLIO */
 
+/* HEADER */
+
+.header-line {
+  border-bottom: 1px solid var(--cornflower-color);
+}
+
 /* MAIN */
+
+.menu-filter-buttons {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
 
 .filter-buttons {
   display: flex;
   gap: 24px;
   justify-content: center;
-  margin-top: 96px;
   margin-bottom: 72px;
 }
 
@@ -318,25 +325,24 @@ span.white {
   padding: 12px 24px;
 }
 
-.project-container  {
-  padding-bottom: 120px;
-}
-
 .project-card-list {
   display: flex;
-  gap: 24px;
+  gap: 48px 24px;
   flex-wrap: wrap;
 }
 
 .project-item {
   padding-bottom: 32px;
-  width: calc((100% - 48px) / 3);
 }
 
-.project-item:nth-last-child(n+4) {
-  margin-bottom: 48px;
-}
 .project-card {
   width: 100%;
-  margin-bottom: 32px;
+}
+
+.project-item-text {
+padding-top: 32px;
+padding-bottom: 32px;
+padding-left: 16px;
+border: 1px solid var(--cornflower-color);
+border-top: none;
 }
